--- a/bob-js-client/src/main/webapp/css/custom.css
+++ b/bob-js-client/src/main/webapp/css/custom.css
@@ -32,14 +32,13 @@ body {
     margin-bottom: 60px;
 }
 
-#footer {
+/*#footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    /* Set the fixed height of the footer here */
     height: 60px;
     background-color: #f5f5f5;
-}
+}*/
 
 .center {
     margin-top: 10px;
