--- a/bob-js-client/src/main/webapp/css/custom.css
+++ b/bob-js-client/src/main/webapp/css/custom.css
@@ -1,8 +1,3 @@
-
-body {
-    padding: 20px;
-}
-
 td {
     padding:3px;
 }
@@ -30,6 +25,7 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
+    padding: 20px;
 }
 
 /*#footer {
@@ -79,4 +75,29 @@ body {
     display: inline-block;
     font-size: 0;
     line-height: 0
+}
+
+header {
+    height:50px;
+}
+
+.affix {
+    width:100%;
+    top:0;
+}
+
+.affix + p {
+    margin-top:70px;
+}
+
+.banner {
+    margin-bottom: 40px;
+    margin-top: 50px;
+}
+
+.navbar-nav{
+    float:none;
+    margin: 0 auto;
+    display: table;
+    table-layout: fixed;
 }
